# winscope

./: .coverage  .gitignore  README.md  WinScope_SUS_Document_v0.2.0.docx  WinScope_UAT_Document_v0.2.0.docx  build.bat  build_exe.spec  generate_uat_document.py  main.py  package_release.bat  pyproject.toml  release-package.bat  test_ui_components.py
WinScope-v0.2.0/: README.md  RELEASE_NOTES_v0.2.0.md  USAGE.txt
WinScope-v0.2.0/tools/winpmem/: README.txt
release/: LICENSE.txt  README.txt
src/: __init__.py  main.py
src/core/: evidence_controller.py  forensic_standards.py
src/modules/: base_module.py  browser_module.py  disk_module.py  eventlogs_module.py  filesystem_module.py  live_system_module.py  memory_module.py  network_module.py  registry_module.py
src/services/: config_manager.py  hash_calculator.py  logger.py  privilege_manager.py  report_generator.py
src/ui/: main_window.py  module_info.py  styles.py  widgets.py
tests/unit/: test_config_manager.py  test_hash_calculator.py  test_logger.py  test_privilege_manager.py
tools/: README.txt  check_tools.py
